# CS100-Final-Project

./: .gitignore  CMakeLists.txt  README.md  consumable.h  weapons.h
JDANG065_CODE_COVERAGE/: index-sort-f.html  index-sort-l.html  index.html
JDANG065_CODE_COVERAGE/header/: Item.h.func-sort-c.html  Item.h.func.html  Item.h.gcov.html  Weapon.h.func-sort-c.html  Weapon.h.func.html  Weapon.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
JDANG065_CODE_COVERAGE/source/: Character.cpp.func-sort-c.html  Character.cpp.func.html  Character.cpp.gcov.html  CharacterData.cpp.func-sort-c.html  CharacterData.cpp.func.html  CharacterData.cpp.gcov.html  CharacterStats.cpp.func-sort-c.html  CharacterStats.cpp.func.html  CharacterStats.cpp.gcov.html  Combat.cpp.func-sort-c.html  Combat.cpp.func.html  Combat.cpp.gcov.html  Consumable.cpp.func-sort-c.html  Consumable.cpp.func.html  Consumable.cpp.gcov.html  Enemy.cpp.func-sort-c.html  Enemy.cpp.func.html  Enemy.cpp.gcov.html  (+15 more)
header/: Character.h  CharacterData.h  CharacterStats.h  Combat.h  CombatEV.h  Consumable.h  CreateChar.h  Enemy.h  EnemyData.h  EnemyStats.h  Entity.h  EntityData.h  EntityStats.h  Event.h  Game.h  Inventory.h  Item.h  LootEv.h  Menu.h  Story.h  Weapon.h  item.h
source/: CMakeLists.txt  Character.cpp  CharacterData.cpp  CharacterStats.cpp  Combat.cpp  CombatEV.cpp  Consumable.cpp  CreateChar.cpp  Enemy.cpp  EnemyData.cpp  EnemyStats.cpp  Entity.cpp  EntityData.cpp  EntityStats.cpp  Game.cpp  Inventory.cpp  Item.cpp  LootEv.cpp  Menu.cpp  Story.cpp  Weapon.cpp  main.cpp
test/: CharacterStatsTest.cpp  CharacterTest.cpp  CombatEVTest.cpp  CombatTest.cpp  ConsumableTest.cpp  EnemyTest.cpp  EntityStatsTest.cpp  EntityTest.cpp  InventoryTest.cpp  ItemsTest.cpp  MenuTest.cpp  Test.cpp  WeaponTest.cpp  maintester.cpp  test.cpp
tests/: Test.cpp
(+45 files in other folders)
