CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_EXECUTABLE(runPrgm
	Character.cpp
    CharacterData.cpp
    CharacterStats.cpp
    Combat.cpp
    CombatEV.cpp
    Consumable.cpp
    CreateChar.cpp
    Enemy.cpp
    EnemyData.cpp
    EnemyStats.cpp
    Game.cpp
    Inventory.cpp
    Item.cpp
    LootEv.cpp
    main.cpp
    Menu.cpp
    Story.cpp
    Weapon.cpp
)